# serializer version: 1
# name: TestRetentionDataWarehouse24hWindow.test_first_time_events_start_dwh_return_24h_window
  '''
  SELECT actor_activity.start_interval_index AS start_event_matching_interval,
         actor_activity.intervals_from_base AS intervals_from_base,
         count(DISTINCT actor_activity.actor_id) AS count
  FROM
    (SELECT actors_with_t0.actor_id AS actor_id,
            floor(divide(dateDiff('hour', assumeNotNull(toDateTime('2025-01-01 00:00:00', 'UTC')), actors_with_t0.t_0), 24)) AS start_interval_index,
            arrayJoin(arrayDistinct(arrayConcat([0], arrayFilter(x -> ifNull(greaterOrEquals(x, 0), 0), groupUniqArray(if(ifNull(greaterOrEquals(return_events.timestamp, actors_with_t0.t_0), 0), floor(divide(dateDiff('hour', actors_with_t0.t_0, return_events.timestamp), 24)), -1)))))) AS intervals_from_base
     FROM
       (SELECT toString(if(not(empty(events__override.distinct_id)), events__override.person_id, events.person_id)) AS actor_id,
               if(and(greaterOrEquals(minIf(toTimeZone(events.timestamp, 'UTC'), equals(events.event, '$signup')), toStartOfInterval(assumeNotNull(toDateTime('2025-01-01 00:00:00', 'UTC')), toIntervalDay(1))), less(minIf(toTimeZone(events.timestamp, 'UTC'), equals(events.event, '$signup')), toDateTime64('explicit_redacted_timestamp', 6, 'UTC'))), minIf(toTimeZone(events.timestamp, 'UTC'), equals(events.event, '$signup')), NULL) AS t_0
        FROM events
        LEFT OUTER JOIN
          (SELECT argMax(person_distinct_id_overrides.person_id, person_distinct_id_overrides.version) AS person_id,
                  person_distinct_id_overrides.distinct_id AS distinct_id
           FROM person_distinct_id_overrides
           WHERE equals(person_distinct_id_overrides.team_id, 99999)
           GROUP BY person_distinct_id_overrides.distinct_id
           HAVING equals(argMax(person_distinct_id_overrides.is_deleted, person_distinct_id_overrides.version), 0) SETTINGS optimize_aggregation_in_order=1) AS events__override ON equals(events.distinct_id, events__override.distinct_id)
        WHERE and(equals(events.team_id, 99999), equals(events.event, '$signup'))
        GROUP BY actor_id
        HAVING isNotNull(t_0)) AS actors_with_t0
     LEFT JOIN
       (SELECT toString(posthog_test_warehouse_renewals_ft.person_id) AS actor_id,
               toTimeZone(posthog_test_warehouse_renewals_ft.occurred_at, 'UTC') AS timestamp
        FROM s3('http://host.docker.internal:19000/posthog/test_storage_bucket-posthog.hogql_queries.insights.retention.data_warehouse_24h_window/posthog_test_warehouse_renewals_ft/*.csv', 'object_storage_root_user', 'object_storage_root_password', 'CSVWithNames', '`id` Int64, `person_id` UUID, `occurred_at` DateTime64(3, \'UTC\')') AS posthog_test_warehouse_renewals_ft
        WHERE and(greaterOrEquals(posthog_test_warehouse_renewals_ft.occurred_at, toStartOfInterval(assumeNotNull(toDateTime('2025-01-01 00:00:00', 'UTC')), toIntervalDay(1))), less(posthog_test_warehouse_renewals_ft.occurred_at, toDateTime64('explicit_redacted_timestamp', 6, 'UTC')))) AS return_events ON equals(actors_with_t0.actor_id, return_events.actor_id)
     GROUP BY actors_with_t0.actor_id,
              actors_with_t0.t_0) AS actor_activity
  GROUP BY start_event_matching_interval,
           intervals_from_base
  ORDER BY start_event_matching_interval ASC,
           intervals_from_base ASC
  LIMIT 100000 SETTINGS format_csv_allow_double_quotes=1,
                        readonly=2,
                        max_execution_time=600,
                        allow_experimental_object_type=1,
                        max_ast_elements=4000000,
                        max_expanded_ast_elements=4000000,
                        max_bytes_before_external_group_by=23622320128,
                        transform_null_in=1,
                        optimize_min_equality_disjunction_chain_length=4294967295,
                        optimize_rewrite_aggregate_function_with_if=0,
                        optimize_min_inequality_conjunction_chain_length=4294967295,
                        allow_experimental_join_condition=1,
                        use_hive_partitioning=0
  '''
# ---
# name: TestRetentionDataWarehouse24hWindow.test_same_table_dwh_start_and_return_24h_window
  '''
  SELECT actor_activity.start_interval_index AS start_event_matching_interval,
         actor_activity.intervals_from_base AS intervals_from_base,
         count(DISTINCT actor_activity.actor_id) AS count
  FROM
    (SELECT actors_with_t0.actor_id AS actor_id,
            floor(divide(dateDiff('hour', assumeNotNull(toDateTime('2025-01-01 00:00:00', 'UTC')), actors_with_t0.t_0), 24)) AS start_interval_index,
            arrayJoin(arrayDistinct(arrayConcat([0], arrayFilter(x -> ifNull(greaterOrEquals(x, 0), 0), groupUniqArray(if(greaterOrEquals(return_events.timestamp, actors_with_t0.t_0), floor(divide(dateDiff('hour', actors_with_t0.t_0, return_events.timestamp), 24)), -1)))))) AS intervals_from_base
     FROM
       (SELECT toString(posthog_test_warehouse_activity.person_id) AS actor_id,
               min(toTimeZone(posthog_test_warehouse_activity.occurred_at, 'UTC')) AS t_0
        FROM s3('http://host.docker.internal:19000/posthog/test_storage_bucket-posthog.hogql_queries.insights.retention.data_warehouse_24h_window/posthog_test_warehouse_activity/*.csv', 'object_storage_root_user', 'object_storage_root_password', 'CSVWithNames', '`id` Int64, `person_id` UUID, `occurred_at` DateTime64(3, \'UTC\'), `activity_type` String') AS posthog_test_warehouse_activity
        WHERE and(equals(posthog_test_warehouse_activity.activity_type, 'signed_up'), and(greaterOrEquals(posthog_test_warehouse_activity.occurred_at, toStartOfInterval(assumeNotNull(toDateTime('2025-01-01 00:00:00', 'UTC')), toIntervalDay(1))), less(posthog_test_warehouse_activity.occurred_at, toDateTime64('2025-01-06 00:00:00.000000', 6, 'UTC'))))
        GROUP BY actor_id) AS actors_with_t0
     LEFT JOIN
       (SELECT toString(posthog_test_warehouse_activity.person_id) AS actor_id,
               toTimeZone(posthog_test_warehouse_activity.occurred_at, 'UTC') AS timestamp
        FROM s3('http://host.docker.internal:19000/posthog/test_storage_bucket-posthog.hogql_queries.insights.retention.data_warehouse_24h_window/posthog_test_warehouse_activity/*.csv', 'object_storage_root_user', 'object_storage_root_password', 'CSVWithNames', '`id` Int64, `person_id` UUID, `occurred_at` DateTime64(3, \'UTC\'), `activity_type` String') AS posthog_test_warehouse_activity
        WHERE and(equals(posthog_test_warehouse_activity.activity_type, 'renewed'), and(greaterOrEquals(posthog_test_warehouse_activity.occurred_at, toStartOfInterval(assumeNotNull(toDateTime('2025-01-01 00:00:00', 'UTC')), toIntervalDay(1))), less(posthog_test_warehouse_activity.occurred_at, toDateTime64('2025-01-06 00:00:00.000000', 6, 'UTC'))))) AS return_events ON equals(actors_with_t0.actor_id, return_events.actor_id)
     GROUP BY actors_with_t0.actor_id,
              actors_with_t0.t_0) AS actor_activity
  GROUP BY start_event_matching_interval,
           intervals_from_base
  ORDER BY start_event_matching_interval ASC,
           intervals_from_base ASC
  LIMIT 100000 SETTINGS format_csv_allow_double_quotes=1,
                        readonly=2,
                        max_execution_time=600,
                        allow_experimental_object_type=1,
                        max_ast_elements=4000000,
                        max_expanded_ast_elements=4000000,
                        max_bytes_before_external_group_by=23622320128,
                        transform_null_in=1,
                        optimize_min_equality_disjunction_chain_length=4294967295,
                        optimize_rewrite_aggregate_function_with_if=0,
                        optimize_min_inequality_conjunction_chain_length=4294967295,
                        allow_experimental_join_condition=1,
                        use_hive_partitioning=0
  '''
# ---
